--- a/public/css/guest.css
+++ b/public/css/guest.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .tombol{
   border-radius: 40px;
   font-weight: bold;
@@ -158,7 +163,7 @@ nav .tombol{
 .tombol-daftar{
   width: 100%;
   height: 100px;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 700;
   text-transform: capitalize;
   border-radius: 30px;
@@ -219,10 +224,10 @@ nav .tombol{
 }
 
 .tabel-rincian{
-  font-size: 25px;
+  font-size: 16px;
   font-weight: 900;
   font-family: sans;
-  -webkit-text-stroke: 2px white; /* width and color */
+  -webkit-text-stroke: 1px white; /* width and color */
   color: #ED1E21;
   text-shadow: 0 3px 20px rgba(1, 1, 1, 0.2);
 }
@@ -323,7 +328,7 @@ footer {
   .tombol-daftar{
     width: 300px;
     height: 75px;
-    font-size: 30px;
+    font-size: 40px;
     text-transform: capitalize;
   }
 
